--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,6 +1,7 @@
 body {
     font-family: Monospace, sans-serif;
     background-color: #36A097;
+    box-sizing: border-box;
 
     /* HAHA #1A5276 */
 }
@@ -37,6 +38,17 @@ p {
 
 a {
     color: yellowgreen;
+}
+
+.intro {
+    
+}
+
+.quiz-card {
+    border: solid 1px yellowgreen;
+    padding: 1em;
+    border-radius: 10px;
+    box-shadow: 0 0 20px grey;
 }
 
 .container {
