--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -110,15 +110,15 @@ a {
     font-size: 0.8em;
 }
 
-.level--beginner {
+.level--1 {
     color: darkgreen;
 }
 
-.level--medium {
+.level--2 {
     color: darkgoldenrod;
 }
 
-.level--expert {
+.level--3 {
     color: darkred;
 }
 
@@ -176,5 +176,12 @@ a {
     border: 10px solid rgb(235, 14, 216);    
 }
 
+.trololo {
+    display: flex; 
+    justify-content: center;
+}
 
+.trolo-img:hover {
+    border: 10px solid rgb(235, 14, 216);    
+}
 
