troisieme jour (je crois)

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -185,3 +185,11 @@ a {
     border: 10px solid rgb(235, 14, 216);    
 }
 
+.ah {
+    background-image: url(https://thumbs.gfycat.com/NiceGloomyAfricanpiedkingfisher-max-1mb.gif);
+}
+
+.ah-404 {
+    font-size: 25em; 
+    color: red; 
+}
