--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -12,7 +12,7 @@ body {
     background-color: #36A097;
     box-sizing: border-box;
     background-image: url(https://media.giphy.com/media/RE5iREBNhI0Ok/giphy.gif);  
-    cursor: url('http://rainbow.arch.scriptmania.com/scripts/bluebub.gif'), auto;
+   /* cursor: url('http://rainbow.arch.scriptmania.com/scripts/bluebub.gif'), auto;*/
    
 }
   
